# look

./: .gitignore  Cargo.toml  README.md  index.json  test_index.json
cli/: Cargo.toml  README.md  test_index.json
cli/src/: cli.rs  config.rs  formatter.rs  main.rs
data/: blue_car.txt  longer_text.txt
indexer/: Cargo.toml  test_index.json
indexer/src/: lib.rs  main.rs
indexer/src/data_ingestion/: mod.rs  text_processing.rs
indexer/src/data_ingestion/file_handlers/: mod.rs
indexer/src/index_builder/: document.rs  file_processing.rs  index_storage.rs  json_serialization.rs
indexer/src/indexer/: json_serialization.rs
indexer/src/search_query/: query_processing.rs  search_result.rs
src/: main.rs
src/data_ingestion/: file_handler.rs  mod.rs  text_processing.rs
src/data_ingestion/file_handlers/: markdown.rs  mod.rs  plain_text.rs
src/database/: mod.rs
src/indexer/: document.rs  file_processing.rs  index_storage.rs  mod.rs
src/search_query/: mod.rs  query_processing.rs  search_result.rs
