[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-stemmers = "1.0.1"
tokenizers = "0.13.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
unicode-segmentation = "1.10.1"
whatlang = "0.16.1"
stop-words = "0.7.1"